2010-02-27 Simon Waters <simon-gnu@technocool.net>

	* Add cmd_memory and other commands from Michel Van den Bergh

	* Remove debug scaffolding

2010-02-27 Simon Waters <simon-gnu@technocool.net>
	
	* further Evaluation fixes suggested or insprired by Lars Mathiesen

	* Start merging changes from Michel Van den Bergh

2010-01-24 Simon Waters <simon-gnu@technocool.net>

	* Remove side to move values from Evaluation function

2010-01-24 Simon Waters <simon-gnu@technocool.net>

	* Evaluation fixes suggested or insprired by Lars Mathiesen

2010-01-03 Simon Waters <simon-gnu@technocool.net>

	* Distributed under the GNU GPL v3

	* Spelling correction in README - thanks Scott McDermott

	* Renamed getline (Problem only reported on Ubuntu)

	* Correct URL for FSF Debian #511760

2009-02-11 Simon Waters <simon-gnu@technocool.net>

	* Ensure check_board prevents invalid positions being analyzed.

2006-05-19 Simon Waters <simon-gnu@technocool.net>      

	* Fix input_thread declaration to allow compilation
	  under GCC v4

	* Change to generated file config.h.in due to 
	  newer tools

	* Various protocol corrections and corrections
	  to output when using Xboard protocol.

--- 5.07 Released
2003-08-07 Mike Curtis <chess@wt.net>

	* Minor ScoreDev code tidy

2003-07-28 Simon Waters <Simon@wretched.demon.co.uk>      

	* ensure gnuchessx included in EXTRA_DIST

2003-06-30 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix to Posix thread for readline
	
	* Fix to ensure "HARD" is default
	
2003-06-30 Mike Curtis <chess@wt.net>
	
	* Improve Posix thread handling

2003-06-28 Mike Curtis <chess@wt.net>

	* Portability fix IsTrustedPlayer

2003-06-28 Simon Waters <Simon@wretched.demon.co.uk>      

	* Portability fix to lexpgn.l

	* Changes to lexpgn.l to handle some special
	  cases.

	* Fix trailing "/" in FEN causes
	  buffer overflow issues. Trailing "/" is
	  kept for compatibility reasons with 5.04

2003-06-19 Mike Curtis <chess@wt.net>

	* Portability fix to lexpgn.l
